ajout Handle_click / check_last_index / add_token

--- a/css/puissance4.css
+++ b/css/puissance4.css
@@ -54,3 +54,7 @@ html {
 #lesBoutons #revenirMenu {
     border-radius: 8px;
 }
+
+.boutonPlayer1 {
+    background-image: url("../img/Jeton.png");
+}
