--- a/css/puissance4.css
+++ b/css/puissance4.css
@@ -13,7 +13,7 @@ body{
     
 #puissance4{
     background: url("../img/Grille1.png");
-    border : 4px solid red;
+    margin-top: 5vw;
 } 
 
 html {
@@ -39,20 +39,25 @@ html {
 } 
 
 #lesBoutons {
-    border : 4px solid blue;
-    margin: 30px;
+    margin: 50px;
     display: flex;
-    
+}
+
+#lesBoutons input {
+    font-size: 2vw;
+    background-color:  #e9a2b7;
+    padding: 1vw;
 }
 
 #lesBoutons #boutonRestart  {
     border-radius: 8px;
-    margin-right: 10px;
-    
+    margin-right: 40px;
+    cursor: pointer;
 }
 
 #lesBoutons #revenirMenu {
     border-radius: 8px;
+    cursor: pointer;
 }
 
 .boutonPlayer1 {
